@@ -1,20 +1,22 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.esa.scenarios;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.esa.EsaTemplateContent;
 import uk.gov.hmcts.reform.sscs.model.docassembly.Descriptor;
 import uk.gov.hmcts.reform.sscs.model.docassembly.WriteFinalDecisionTemplateBody;
 
-public class EsaScenario5Test {
+class EsaScenario5Test {
 
     @Test
-    public void testScenario5() {
+    void testScenario5() {
 
         List<Descriptor> schedule2Descriptors =
-            Arrays.asList(Descriptor.builder()
+            Collections.singletonList(Descriptor.builder()
                 .activityQuestionValue("Mobilising Unaided")
                 .activityAnswerValue("1")
                 .activityAnswerLetter("c").activityAnswerPoints(9).build());
@@ -37,39 +39,41 @@ public class EsaScenario5Test {
 
         EsaTemplateContent content = EsaScenario.SCENARIO_5.getContent(body);
 
-        String expectedContent = "The appeal is allowed.\n"
-            + "\n"
-            + "The decision made by the Secretary of State on 20/09/2020 is set aside.\n"
-            + "\n"
-            + "Felix Sydney has limited capability for work.\n"
-            + "\n"
-            + "In applying the Work Capability Assessment 9 points were scored from the activities and descriptors in Schedule 2 of the Employment and Support Allowance (ESA) Regulations 2008 made up as follows:\n"
-            + "\n"
-            + "Mobilising Unaided\tc.1\t9\n"
-            + "\n"
-            + "\n"
-            + "Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 3 of the ESA Regulations applied. Regulation 35 did not apply.\n"
-            + "\n"
-            + "My first reasons\n"
-            + "\n"
-            + "My second reasons\n"
-            + "\n"
-            + "Something else\n"
-            + "\n"
-            + "This has been an oral (face to face) hearing. Felix Sydney the appellant attended the hearing today and the Tribunal considered the appeal bundle to page A1. First Tier Agency representative attended on behalf of the Respondent.\n"
-            + "\n";
+        String expectedContent = """
+            The appeal is allowed.
 
-        Assert.assertEquals(10, content.getComponents().size());
+            The decision made by the Secretary of State on 20/09/2020 is set aside.
 
-        Assert.assertEquals(expectedContent, content.toString());
+            Felix Sydney has limited capability for work.
+
+            In applying the Work Capability Assessment 9 points were scored from the activities and descriptors in Schedule 2 of the Employment and Support Allowance (ESA) Regulations 2008 made up as follows:
+
+            Mobilising Unaided\tc.1\t9
+
+
+            Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 3 of the ESA Regulations applied. Regulation 35 did not apply.
+
+            My first reasons
+
+            My second reasons
+
+            Something else
+
+            This has been an oral (face to face) hearing. The following people attended: Felix Sydney the appellant and a representative from the First Tier Agency. The Tribunal considered the appeal bundle to page A1.
+
+            """;
+
+        assertEquals(10, content.getComponents().size());
+
+        assertEquals(expectedContent, content.toString());
 
     }
 
     @Test
-    public void testScenario5_NoSchedule2Descriptors() {
+    void testScenario5_NoSchedule2Descriptors() {
 
         List<Descriptor> schedule2Descriptors =
-            Arrays.asList();
+            List.of();
 
         WriteFinalDecisionTemplateBody body =
             WriteFinalDecisionTemplateBody.builder()
@@ -89,28 +93,30 @@ public class EsaScenario5Test {
 
         EsaTemplateContent content = EsaScenario.SCENARIO_5.getContent(body);
 
-        String expectedContent = "The appeal is allowed.\n"
-            + "\n"
-            + "The decision made by the Secretary of State on 20/09/2020 is set aside.\n"
-            + "\n"
-            + "Felix Sydney has limited capability for work.\n"
-            + "\n"
-            + "In applying the Work Capability Assessment 0 points were scored from the activities and descriptors in Schedule 2 of the Employment and Support Allowance (ESA) Regulations 2008.\n"
-            + "\n"
-            + "Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 3 of the ESA Regulations applied. Regulation 35 did not apply.\n"
-            + "\n"
-            + "My first reasons\n"
-            + "\n"
-            + "My second reasons\n"
-            + "\n"
-            + "Something else\n"
-            + "\n"
-            + "This has been an oral (face to face) hearing. Felix Sydney the appellant attended the hearing today and the Tribunal considered the appeal bundle to page A1. First Tier Agency representative attended on behalf of the Respondent.\n"
-            + "\n";
+        String expectedContent = """
+            The appeal is allowed.
 
-        Assert.assertEquals(9, content.getComponents().size());
+            The decision made by the Secretary of State on 20/09/2020 is set aside.
 
-        Assert.assertEquals(expectedContent, content.toString());
+            Felix Sydney has limited capability for work.
+
+            In applying the Work Capability Assessment 0 points were scored from the activities and descriptors in Schedule 2 of the Employment and Support Allowance (ESA) Regulations 2008.
+
+            Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 3 of the ESA Regulations applied. Regulation 35 did not apply.
+
+            My first reasons
+
+            My second reasons
+
+            Something else
+
+            This has been an oral (face to face) hearing. The following people attended: Felix Sydney the appellant and a representative from the First Tier Agency. The Tribunal considered the appeal bundle to page A1.
+
+            """;
+
+        assertEquals(9, content.getComponents().size());
+
+        assertEquals(expectedContent, content.toString());
 
     }
 }
